cleanup
cleanup old code and add documentation